fix horizontal scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,7 @@ body {
 
 ::-webkit-scrollbar {
 	width: 20px;
+	height: 20px;
 }
 
 ::-webkit-scrollbar-track {
